gnubiff -- History of visible changes.

Copyright (C) 2000-2005, Nicolas Rougier <Nicolas.Rougier@loria.fr>
See the end for copying conditions.
Please send gnubiff bug reports to gnubiff-bugs@lists.sourceforge.net

Version 2.2.0
 * Robert Sowada
   - Changed version to 2.2.0
   - Removed not needed include files from "src/gnubiff.cc"

Version 2.1.6
 * Robert Sowada
   - Changed version to 2.1.6

Version 2.1.5		2005-08-21 18:11
 * Robert Sowada
   - Changed version to 2.1.5
   - Bugfix: Checking if a FAM connection is established
   - Bugfix: Threadsafeness of FAM code
   - Bugfix: Retrying monitoring via FAM
   - Copyright message in Credits dialog updated
   - Bugfix: Finally fixed the FAM problem (bug #1221040; thanks to Hubert
        Verstraete for providing a patch)
   - Updated TODO
   - Added Hubert Verstraete to contributors
   - Bugfix: Obtaining keyboard focus automatically (thanks to Wade Berrier
        for reminding us of this bug and for providing a patch)
   - Added Wade Berrier to contributors
   - Feature: Option "pop3_max_uid_length" for dealing with buggy servers
   - Bugfix: Define HAVE_BIND_TEXTDOMAIN_CODESET in configure file (debian bug
        #305002; thanks to Elie Morisse for reporting this bug; thanks to
        Martin Samuelsson for giving information how to reproduce the bug;
        thanks to Roland Stigge for finding the exact cause of the bug)
   - Added config.rpath to config subdir
   - Bugfix: "config/gnubiff.spec.in" must be specified in "Makefile.am"
   - Updated NEWS

Version 2.1.4		2005-06-27 22:45
 * Robert Sowada
   - Changed version to 2.1.4
   - Version is now inserted automatically in gnubiff.spec, gnubiff.texi
   - Added "config/mdate-sh" (needed for generating "doc/version.texi")
   - Added "doc/version.texi" (can be updated via "--enable-maintainer-mode")
   - Checked files for incorrect string size type without problems (so all
     files are checked now; see below for files checked for version 2.1.3):